// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: false, isPrevHidden: false and scrollIndicatorPosition: center, theme: dark  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(14,14,18,1) 0%,rgba(14,14,18,0.9) 10%,rgba(14,14,18,0.668116) 40%,rgba(14,14,18,0.331884) 60%,rgba(14,14,18,0.0816599) 80%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(14,14,18,1) 0%,rgba(14,14,18,0.9) 10%,rgba(14,14,18,0.668116) 40%,rgba(14,14,18,0.331884) 60%,rgba(14,14,18,0.0816599) 80%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(126, 127, 130, 0.20);
  }
  .button:hover > .icon {
    filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: false, isPrevHidden: false and scrollIndicatorPosition: center, theme: light  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.16));
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(148, 149, 152, 0.20);
  }
  .button:hover > .icon {
    filter: false;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: false, isPrevHidden: false and scrollIndicatorPosition: top, theme: light  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.16));
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(148, 149, 152, 0.20);
  }
  .button:hover > .icon {
    filter: false;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: false, isPrevHidden: true and scrollIndicatorPosition: undefined, theme: dark  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(14,14,18,1) 0%,rgba(14,14,18,0.9) 10%,rgba(14,14,18,0.668116) 40%,rgba(14,14,18,0.331884) 60%,rgba(14,14,18,0.0816599) 80%,rgba(14,14,18,0) 100%);
  visibility: hidden;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(14,14,18,1) 0%,rgba(14,14,18,0.9) 10%,rgba(14,14,18,0.668116) 40%,rgba(14,14,18,0.331884) 60%,rgba(14,14,18,0.0816599) 80%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: hidden;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(126, 127, 130, 0.20);
  }
  .button:hover > .icon {
    filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: true, isPrevHidden: false and scrollIndicatorPosition: undefined, theme: light  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.16));
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: hidden;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(148, 149, 152, 0.20);
  }
  .button:hover > .icon {
    filter: false;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: default, isNextHidden: true, isPrevHidden: true and scrollIndicatorPosition: undefined, theme: light  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 0%,rgba(255,255,255,0.9) 10%,rgba(255,255,255,0.668116) 40%,rgba(255,255,255,0.331884) 60%,rgba(255,255,255,0.0816599) 80%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.16));
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: hidden;
  }
  .action-next .button {
    visibility: hidden;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(148, 149, 152, 0.20);
  }
  .button:hover > .icon {
    filter: false;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: surface, isNextHidden: false, isPrevHidden: false and scrollIndicatorPosition: center, theme: dark  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(33,34,37,1) 0%,rgba(33,34,37,0.9) 10%,rgba(33,34,37,0.668116) 40%,rgba(33,34,37,0.331884) 60%,rgba(33,34,37,0.0816599) 80%,rgba(33,34,37,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(33,34,37,1) 0%,rgba(33,34,37,0.9) 10%,rgba(33,34,37,0.668116) 40%,rgba(33,34,37,0.331884) 60%,rgba(33,34,37,0.0816599) 80%,rgba(33,34,37,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #EEEFF2;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(126, 127, 130, 0.20);
  }
  .button:hover > .icon {
    filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColorScheme: surface, isNextHidden: false, isPrevHidden: false and scrollIndicatorPosition: center, theme: light  1`] = `
":host {
  display: block !important;
  height: inherit !important;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: grid;
  grid-template-columns: 48px minmax(0, 1fr) 48px;
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: scroll hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #0A0AFF;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-left: -1px;
  grid-area: 1 / 1 / 1 / 1;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(238,239,242,1) 0%,rgba(238,239,242,0.9) 10%,rgba(238,239,242,0.668116) 40%,rgba(238,239,242,0.331884) 60%,rgba(238,239,242,0.0816599) 80%,rgba(238,239,242,0) 100%);
  visibility: visible;
}
.action-prev .button {
  margin-left: 8px;
}
.action-next {
  position: relative;
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  margin-right: -1px;
  grid-area: 1 / 3 / 1 / 3;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(238,239,242,1) 0%,rgba(238,239,242,0.9) 10%,rgba(238,239,242,0.668116) 40%,rgba(238,239,242,0.331884) 60%,rgba(238,239,242,0.0816599) 80%,rgba(238,239,242,0) 100%);
  visibility: visible;
}
.action-next .button {
  margin-right: 8px;
}
.button {
  display: flex;
  pointer-events: auto;
  position: static;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  color: #010205;
  background-color: #EEEFF2;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.16));
}
@media(hover:hover) {
  .root {
    grid-template-columns: 64px minmax(0, 1fr) 64px;
  }
  .action-prev .button {
    visibility: visible;
  }
  .action-next .button {
    visibility: visible;
  }
  .button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  .button:hover {
    background-color: rgba(148, 149, 152, 0.20);
  }
  .button:hover > .icon {
    filter: false;
  }
}
"
`;
